# cuda-tile

./: README.md
cmake/: IncludeLLVM.cmake
include/cuda_tile-c/Dialect/: CudaTileDialect.h  CudaTileOptimizer.h
lib/Bytecode/: BytecodeEnums.h
lib/Bytecode/Common/: CommandLineOptions.cpp  Version.cpp
lib/Bytecode/Reader/: BytecodeReader.cpp
lib/Bytecode/Translation/: BytecodeTranslation.cpp
lib/Bytecode/Writer/: BytecodeWriter.cpp  CMakeLists.txt
lib/CAPI/Dialect/: CMakeLists.txt  CudaTileDialect.cpp
python/: CMakeLists.txt
python/Dialect/: DialectCudaTile.cpp
python/cuda_tile/dialects/: cuda_tile_ops.py
scripts/: get-cuda-tile-version-for-llvm-hash.sh
test/: CMakeLists.txt  lit.cfg.py
test/Bytecode/: attrsTest.mlir  list_versions.mlir
test/Bytecode/invalid/: invalid_structure.mlir
test/Bytecode/versioning/: legacy_global_constant_rejected.mlir  legacy_global_visibility_rejected.mlir  multiple_globals_legacy_bytecode.mlir  new_types.mlir  new_types_reader_error.mlir
test/Dialect/CudaTile/: arith.mlir  (+18 more)
test/lib/: CMakeLists.txt  TestPasses.cpp
test/python/: cuda_tile_public_bindings.py
tools/cuda-tile-opt/: CMakeLists.txt  cuda-tile-opt.cpp
tools/cuda-tile-optimize/: CMakeLists.txt  cuda-tile-optimize.cpp
tools/cuda-tile-tblgen/: BytecodeAttrAnalysis.cpp  BytecodeAttrAnalysis.h  BytecodeAttrCodeGen.cpp  BytecodeAttrCodeGen.h  BytecodeGen.cpp  BytecodeGenUtilities.cpp  BytecodeGenUtilities.h  BytecodeReaderGen.cpp  BytecodeTypeAnalysis.cpp  BytecodeTypeAnalysis.h  BytecodeTypeCodeGen.cpp  BytecodeTypeCodeGen.h  CMakeLists.txt  CudaTileAttr.cpp  CudaTileAttr.h  CudaTileOp.cpp  CudaTileOp.h  CudaTileType.cpp  CudaTileType.h  Emitter.cpp  Emitter.h  SpecGen.cpp  SpecGen.h  cuda-tile-tblgen.cpp
tools/cuda-tile-translate/: CMakeLists.txt  cuda-tile-translate.cpp
(+29 files in other folders)
